# url-snaphotter

./: .gitignore  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
url_snapshotter/: __init__.py  async_requests.py  cli.py  content_utils.py  db_utils.py  input_handler.py  logger_utils.py  logging_config.py  output_formatter.py  patterns.py  snapshot_fetcher.py  snapshot_manager.py
url_snapshotter/commands/: __init__.py  compare_command.py  create_command.py  list_command.py  view_command.py
url_snapshotter/tests/: __init__.py  test_db_utils.py
