[tool.poetry]
name = "url-snaphotter"
version = "1.0.0"
description = "A tool to capture and compare snapshots of URLs."
authors = ["Vince van Daal <vince-os@vandaal.io>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "url_snapshotter" }
]

[tool.poetry.scripts]
url-snapshotter = "url_snapshotter.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "3.10.8"
click = "8.1.7"
inquirerpy = "0.3.4"
pytest = "8.3.3"
rich = "13.9.1"
setuptools = "75.1.0"
sqlalchemy = "2.0.35"
yaspin = "3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
